# cognitive-core

./: LICENSE  README.md  pyproject.toml
app/: __init__.py  app.py  dependencies.py  main.py
app/api/: app.py
app/comprehension/: comprehension_agent.py
app/controllers/: core_entry.py
app/core/agents/: comprehension_agent.py  evaluation_agent.py  orchestration_agent.py  reasoning_agent.py
app/evaluation/: evaluator.py
app/main/comprehension/: comprehension_agent.py
app/main/evaluation/: evaluator.py
app/main/orchestration/: orchestrator.py
app/main/reasoning/: reasoning_agent.py
app/models/: comprehension_output.py  evaluation_output.py  user_input.py
app/orchestration/: orchestrator.py
app/reasoning/: reasoning_agent.py
app/settings/: settings.py
