[tool.poetry]
name = "cognitive-core"
version = "0.1.0"
description = "A personal research project for creating a cognitive architecture utilizing LLM technology to have a foundational implementation of an AGI system."
authors = ["Ian Tharp <praht09ian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
openai = "^1.52.2"
pytest = "^8.3.3"
pydantic = "^2.9.2"
langchain = "^0.3.4"
langchain-openai = "^0.2.4"
langgraph = "^0.2.39"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
